// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty 1`] = `undefined`;

exports[`Multiple entries 1`] = `
<ol
  class="s-x5nEMCoiqeIy"
>
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
      href="/"
    >
      home
    </a>
  </li>
   
  <li
    class="s-x5nEMCoiqeIy"
  >
    &gt;
  </li>
  
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
      href="/account"
    >
      account
    </a>
  </li>
   
  <li
    class="s-x5nEMCoiqeIy"
  >
    &gt;
  </li>
  
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
    >
      details
    </a>
  </li>
   
  
</ol>
`;

exports[`Single entry 1`] = `
<ol
  class="s-x5nEMCoiqeIy"
>
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
    >
      home
    </a>
  </li>
   
  
</ol>
`;
